--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,137 +1,171 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.coordinatorlayout.widget.CoordinatorLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="16dp"
         tools:context=".ui.main.MainActivity">
 
-    <!-- Title -->
-    <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/til_title"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:hint="@string/title_input_layout_hint"
-            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:counterEnabled="true"
-            app:counterMaxLength="20">
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="16dp">
 
-        <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_title"
-                android:layout_width="match_parent"
+        <!-- Title -->
+        <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/til_title"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:maxLength="20" />
-    </com.google.android.material.textfield.TextInputLayout>
+                android:hint="@string/title_input_layout_hint"
+                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:counterEnabled="true"
+                app:counterMaxLength="20">
 
-    <!-- Content -->
-    <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/til_content"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:hint="@string/content_input_layout_hint"
-            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@id/til_title"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:counterEnabled="true"
-            app:counterMaxLength="500">
+            <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/et_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:maxLength="20" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_content"
-                android:layout_width="match_parent"
-                android:layout_height="120dp"
-                android:gravity="top"
-                android:inputType="textMultiLine"
-                android:maxLength="500" />
-    </com.google.android.material.textfield.TextInputLayout>
+        <!-- Content -->
+        <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/til_content"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:hint="@string/content_input_layout_hint"
+                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@id/til_title"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:counterEnabled="true"
+                app:counterMaxLength="500">
 
-    <!-- Date -->
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/cv_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        app:cardElevation="0dp"
-        app:strokeWidth="1dp"
-        app:rippleColor="?attr/colorControlHighlight"
-        app:layout_constraintTop_toBottomOf="@id/til_content"
-        app:layout_constraintStart_toStartOf="parent">
+            <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/et_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="120dp"
+                    android:gravity="top"
+                    android:inputType="textMultiLine"
+                    android:maxLength="500" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <TextView
-            android:id="@+id/tv_date"
+        <!-- Date -->
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/cv_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/date_text_view_hint"
-            android:padding="12dp"
-            android:minHeight="48dp"
-            android:textAppearance="?attr/textAppearanceBodyLarge"
-            android:clickable="true"
-            android:focusable="true"
-            android:background="?attr/selectableItemBackgroundBorderless" />
-    </com.google.android.material.card.MaterialCardView>
-
-    <!-- Tags -->
-    <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/til_tag"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:hint="@string/tag_input_layout_hint"
-            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
             android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@id/cv_date"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:counterEnabled="true"
-            app:counterMaxLength="15">
+            app:cardElevation="0dp"
+            app:strokeWidth="1dp"
+            app:rippleColor="?attr/colorControlHighlight"
+            app:layout_constraintTop_toBottomOf="@id/til_content"
+            app:layout_constraintStart_toStartOf="parent">
 
-        <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_tag"
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/tv_date"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:inputType="text"
-                android:imeOptions="actionDone"
-                android:maxLength="15" />
-    </com.google.android.material.textfield.TextInputLayout>
+                android:text="@string/date_text_view_hint"
+                android:padding="12dp"
+                android:minHeight="48dp"
+                android:textAppearance="?attr/textAppearanceBodyLarge"
+                android:clickable="true"
+                android:focusable="true"
+                android:background="?attr/selectableItemBackgroundBorderless" />
+        </com.google.android.material.card.MaterialCardView>
 
-    <com.google.android.material.chip.ChipGroup
-            android:id="@+id/cg_tags"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:singleLine="false"
-            app:chipSpacing="8dp"
-            app:layout_constraintTop_toBottomOf="@id/til_tag"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+        <!-- Tags -->
+        <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/til_tag"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:hint="@string/tag_input_layout_hint"
+                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@id/cv_date"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:counterEnabled="true"
+                app:counterMaxLength="15">
 
-    <!-- Button -->
-    <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_save"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@string/save_button_text"
-            style="@style/Widget.Material3.Button"
-            android:enabled="false"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@id/cg_tags"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/et_tag"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="text"
+                    android:imeOptions="actionDone"
+                    android:maxLength="15" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-    <!-- List -->
-    <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_journal"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@id/btn_save"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            tools:listitem="@layout/journal_item"/>
+        <com.google.android.material.chip.ChipGroup
+                android:id="@+id/cg_tags"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:singleLine="false"
+                app:chipSpacing="8dp"
+                app:layout_constraintTop_toBottomOf="@id/til_tag"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <!-- Button -->
+        <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_save"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@string/save_button_text"
+                style="@style/Widget.Material3.Button"
+                android:enabled="false"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@id/cg_tags"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+        <!-- Search Bar -->
+        <com.google.android.material.search.SearchBar
+                android:id="@+id/sb_search"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:hint="@string/search_hint"
+                app:layout_constraintTop_toBottomOf="@id/btn_save"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+        <!-- List -->
+        <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_journal"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@id/sb_search"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                tools:listitem="@layout/journal_item"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <com.google.android.material.search.SearchView
+            android:id="@+id/sv_search"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="@string/search_hint"
+            app:layout_anchor="@id/sb_search">
+
+        <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_search_results"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="16dp"
+                tools:listitem="@layout/journal_item"/>
+
+    </com.google.android.material.search.SearchView>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
+
